updates to dashboard, adding/deleting rows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,7 @@ td {
   padding-bottom: 0.75rem;
   border-top: 1px solid #18181b;
 }
+
+td:first-child , th:first-child {
+  padding-left: 1.7rem;
+}
